--- a/Test2/Login.html
+++ b/Test2/Login.html
@@ -14,6 +14,9 @@
             {
                 alert("Login Successful....!")
             }
+            else{
+                alert("login failed...!")
+            }
 
         }
     </script>
