--- a/Test2/Login.html
+++ b/Test2/Login.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
-        function login(){
-            var uemail=document.getElementById("txtemail").value
-            var upassword=document.getElementById("txtpassword").value
-            var email=localStorage.getItem("email")
-            var password=localStorage.getItem("password")
-            if(uemail===email && upassword===password)
-            {
-                alert("Login Successful....!")
+        function login() {
+            var islogged=false
+            var uemail = document.getElementById("txtemail").value
+            var upassword = document.getElementById("txtpassword").value
+            var email = localStorage.getItem("email")
+            var password = localStorage.getItem("password")
+            var user = JSON.parse(localStorage.getItem('users'))
+            for (let index = 0; index < user.length; index++) {
+                if (uemail === user[index].email && upassword === user[index].password) {
+                  
+                    islogged=true
+                }
+              
             }
-            else{
-                alert("login failed...!")
-            }
+          if(!islogged)
+          {
+            alert("Login Fail....")
+          }
+          else{
+            alert("Login Successful....!")
+          }
+
 
         }
     </script>
 </head>
+
 <body>
     <div>
         <h1>Login </h1>
@@ -36,4 +48,5 @@
         </form>
     </div>
 </body>
+
 </html>
